--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Spring Boot Parent ensures proper packaging and plugin setup -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -20,14 +19,13 @@
     <packaging>jar</packaging>
 
     <name>sample-java-app</name>
-    <description>Sample Spring Boot Java app for Jenkins CI/CD + Docker</description>
+    <description>Sample Spring Boot Java app</description>
 
     <properties>
         <java.version>21</java.version>
     </properties>
 
     <dependencies>
-        <!-- Spring Boot Web dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -36,7 +34,6 @@
 
     <build>
         <plugins>
-            <!-- Spring Boot plugin for creating executable JAR -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -44,5 +41,11 @@
         </plugins>
     </build>
 
-</project>
+    <distributionManagement>
+        <repository>
+            <id>jenkins-maven-releases</id>
+            <url>http://172.25.3.113:8081/repository/jenkins-maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
+</project>
